    * 0436 FIX: Fix broken Site status switching via sidebar snapin...
    * 0420 FIX: LDAP: Roles/Groups are now synced even if case of DNs do not match...
    * 0421 FIX: UserDB: Fixed lost passwords when changing users in large user databases...
    * 0423 FIX: Users are not logged out anymore during changing their own passwords...

    WATO:
    * 0308 Multisite can now set rotation view permissions for NagVis...
    * 0329 Removed Distributed WATO peer mode...
            NOTE: Please refer to the migration notes!
    * 0244 New features for WATO page Backup & Restore...
    * 0382 Active HTTP check now supports multiline regexp matching...
    * 0112 Explicit mapping of clustered services can now be done with WATO...
    * 0437 Convert WATO rule for debug_log into simple Checkbox...
    * 0057 FIX: Fix exception in WATO host editor on custom tag without topic...
    * 0241 FIX: Improved sorting of WATO folders in dropdown menu...
    * 0019 FIX: Fixed wording in WATO rule for MSSQL check
    * 0242 FIX: Parameters for clustered services can now be configured on the cluster host...
    * 0309 FIX: Trying to prevent read/write conflicts with a large user base...
    * 0311 FIX: Fixed "Inventory failed" message when trying an inventory on clusters via WATO...
    * 0330 FIX: Improved performance of WATO slave push with a large user base...
    * 0331 FIX: LDAP diagnostic LOG can now have the $OMD_SITE$ macro configured via WATO...
    * 0332 FIX: Own host tag groups without topics resulted in two groups "Host tags" in the rule editor
    * 0361 FIX: The page linked by "new rule" can now be bookmarked again
    * 0341 FIX: Avoid rare exception in WATO when deleting a host...
    * 0376 FIX: LDAP: Default configuration of attributes is reflected within WATO now
    * 0346 FIX: Fix folder visibility in WATO for unpriviledged users...
    * 0385 FIX: Better error handling for invalid service regex in rule conditions...