@@ -97,6 +97,7 @@
     * 0420 FIX: LDAP: Roles/Groups are now synced even if case of DNs do not match...
     * 0421 FIX: UserDB: Fixed lost passwords when changing users in large user databases...
     * 0423 FIX: Users are not logged out anymore during changing their own passwords...
+    * 0424 FIX: Improved error handling in case of incorrect auth config in distributed WATO environments
 
     WATO:
     * 0308 Multisite can now set rotation view permissions for NagVis...
